--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="GoToWebsite">На сайт</string>
     <string name="SBPSTU">Санкт-Петербургский Политехнический университет Петра Великого</string>
     <string name="AppliedMathDept">Кафедра прикладной математики</string>
+    <string name="radarwatch">RadarWatch</string>
 </resources>
