--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="SBPSTU">Санкт-Петербургский Политехнический университет Петра Великого</string>
     <string name="AppliedMathDept">Кафедра прикладной математики</string>
     <string name="radarwatch">RadarWatch</string>
+    <string name="settings">Settings</string>
+    <string name="color_scheme">Color Scheme</string>
+    <string name="preferences">Preferences</string>
 </resources>
