status bar removed, settings toolbar color changed accordingly to color scheme, text padding changed to unified style

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="GoToWebsite">На сайт</string>
     <string name="SBPSTU">Санкт-Петербургский Политехнический университет Петра Великого</string>
     <string name="AppliedMathDept">Кафедра прикладной математики</string>
-    <string name="radarwatch">RadarWatch</string>
+    <string name="radarwatch">Часы - радар</string>
     <string name="settings">Настройки</string>
     <string name="color_scheme">Цветовая гамма</string>
     <string name="preferences">Настройки</string>
