--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="settings">Settings</string>
     <string name="color_scheme">Color Scheme</string>
     <string name="preferences">Preferences</string>
+    <string name="appleimage">appleImage</string>
 </resources>
