--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,26 @@
     <string name="app_name">RadarWatch</string>
     <string name="start">Start</string>
     <string name="GoToWebsite">To website</string>
-    <string name="SBPSTU">Peter the Great St.Petersburg Polytechnic University Политехнический университет Петра Великого</string>
+    <string name="SBPSTU">Peter the Great St.Petersburg Polytechnic University</string>
     <string name="AppliedMathDept">Applied Math Department</string>
     <string name="radarwatch">RadarWatch</string>
     <string name="settings">Settings</string>
     <string name="color_scheme">Color Scheme</string>
     <string name="preferences">Preferences</string>
-    <string name="appleimage">appleImage</string>
+
+    <!---->
+    <!--<string name="appleimage">appleImage</string>-->
+
+    <!--<string name="str_amd_url">https://amd.spbstu.ru/</string>-->
+    <!--<string name="action_settings">Settings</string>-->
+    <!--<string name="str_depth">Applied Math Department</string>-->
+    <!--<string name="str_university1">Peter the Great St.Petersburg</string>-->
+    <!--<string name="str_university2">Politechnic University</string>-->
+    <!--<string name="str_toweb">To web site</string>-->
+    <!--<string name="str_start">Start</string>-->
+    <!--<string name="str_restart">Restart</string>-->
+    <!--<string name="str_score">Score</string>-->
+    <!--<string name="str_moves">Moves</string>-->
+    <!--<string name="str_total">Total</string>-->
+    <!--<string name="str_combo">Combo</string>-->
 </resources>
