--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,10 @@
     <string name="settings">Настройки</string>
     <string name="color_scheme">Цветовая гамма</string>
     <string name="preferences">Настройки</string>
+    <string name="action_settings">Настройки</string>
+    <string name="str_university1">Санкт-Петербургский Политехнический университет</string>
+    <string name="str_university2">Политехнический университет</string>
+    <string name="str_toweb">На сайт</string>
+    <string name="str_depth">Кафедра Прикладной Математики</string>
+    <string name="str_start">Старт</string>
 </resources>
