--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
 
     <string name="str_amd_url">https://amd.spbstu.ru/</string>
     <string name="action_settings">Settings</string>
-    <string name="str_depth">Applied Math Department</string>
     <string name="str_university1">Peter the Great St.Petersburg</string>
     <string name="str_university2">Politechnic University</string>
     <string name="str_toweb">To web site</string>
@@ -24,4 +23,5 @@
     <string name="str_moves">Moves</string>
     <string name="str_total">Total</string>
     <string name="str_combo">Combo</string>
+    <string name="str_depth">Applied math department</string>
 </resources>
